# jsonlines-db-api

./: README.md  setup.cfg
.github/workflows/: unit-tests.yml
examples/: jsonlfile.py  test.jsonl
src/jsonlinesdb/: adapter.py
tests/: jsonlines_test.py
