[metadata]
name = sqlalchemy-jsonlines
version = 0.0.1
author = nikkie
author_email = takuyafjp+develop@gmail.com
uri = https://github.com/ftnext/jsonlines-db-api
license = MIT

[options]
package_dir =
    =src
packages=find:
install_requires =
    jsonlines
    shillelagh

[options.packages.find]
where=src

[options.entry_points]
shillelagh.adapter =
    jsonlfile = jsonlinesdb.adapter:JsonlFile
